--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Introduction and Resume</a></li>
+        <li><a href="Index.html">Introduction and Resume</a></li>
         <li><a href="Hobbies.html">Hobbies</a></li>
         <li><a href="Gallery.html">Gallery</a></li>
       </ul>
