--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
 </nav>
 <nav>
 <h2>Professional Experience</h2>
-<ul>
-  <li>IT Technician</li>
+<ol>
+  <p>IT Technician</p>
     <ul>
       <li>Performs imaging, patches, break/fix, etc.</li>
       <li>Proficient in troubleshooting network equipments/hardware components.</li>
     </ul>
-  <li>HelpDesk Support - Level 1</li>
+  <p>HelpDesk Support - Level 1</p>
     <ul>
       <li>Provided excellent customer service to restaurant IT department.</li>
       <li>Highly skilled technical troubleshooting.</li>
     </ul>
-</ul>
+</ol>
 <h2>Achievements</h2>
   <ul>
     <li>CompTIA A+ and Network+</li>
