--- a/index.html
+++ b/index.html
@@ -22,24 +22,26 @@
 </nav>
 <nav>
 <h2>Education</h2>
-  <ul>
-    <li>Bachelor's in Business and Information Technology - Illinois Institute of Technology</li>
-    <li>Associate's in Science - College of DuPage</li>
-  </ul>
-</nav>
-<nav>
+<ul>
+  <li>Bachelor's in Business and Information Technology - Illinois Institute of Technology</li>
+  <li>Associate's in Science - College of DuPage</li>
+</ul>
 <h2>Professional Experience</h2>
 <ol>
+  <li>
   <p>IT Technician</p>
     <ul>
       <li>Performs imaging, patches, break/fix, etc.</li>
-      <li>Proficient in troubleshooting network equipments/hardware components.</li>
+      <li>Proficient in troubleshooting network equipment/hardware components.</li>
     </ul>
-  <p>HelpDesk Support - Level 1</p>
+  </li>
+  <li>
+    <p>HelpDesk Support - Level 1</p>
     <ul>
       <li>Provided excellent customer service to restaurant IT department.</li>
-      <li>Highly skilled technical troubleshooting.</li>
+      <li>Highly skilled in technical troubleshooting.</li>
     </ul>
+  </li>
 </ol>
 <h2>Achievements</h2>
   <ul>
