--- a/gallery.html
+++ b/gallery.html
@@ -15,27 +15,27 @@
 </nav>
 </header>
 <h1>Traveling</h1>
-<nav>
-  <p>Tour to Turkey '24</p>
+<div>
+  <h3>Tour to Turkey '24</h3>
   <img class="image" src="images/turkey.jpg" alt="Hagia Sophia view by the Bosphorus River">
-  <ul>Glimpse of summer'24, breathtaking image of Hagia Sophia and Blue Mosque from the Cruise at Bosphorus River in Istanbul, Turkey.</ul>
-</nav>
-<nav>
-  <p>Tour to Makkah '24</p>
+  <p>Glimpse of summer'24, breathtaking image of Hagia Sophia and Blue Mosque from the Cruise at Bosphorus River in Istanbul, Turkey.</p>
+</div>
+<div>
+  <h3>Tour to Makkah '24</h3>
   <img class="image" src="images/makkah.jpg" alt="Makkah tour lighted up green taken from the roof of Al Haram">
-  <ul>A stunning night picture of the illuminated Makkah Tower taken from the roof of Al Haram Mosque in Makkah, with its iconic clock glowing against the dark sky.</ul>
-</nav>
+  <p>A stunning night picture of the illuminated Makkah Tower taken from the roof of Al Haram Mosque in Makkah, with its iconic clock glowing against the dark sky.</p>
+</div>
 <h1>Fishing</h1>
-<nav>
-  <p>Pond Fishing</p>
+<div>
+  <h3>Pond Fishing</h3>
   <img class="image" src="images/fish.jpg" alt="Caught smallmouth bass fish from pond in four seasons park Lombard.">
-  <ul>A smallmouth bass was carefully caught using a handhandled net and released back into the pond after the picture was taken.</ul>
-</nav>
-<nav>
-  <p>Open Sea fishing</p>
+  <p>A smallmouth bass was carefully caught using a handhandled net and released back into the pond after the picture was taken.</p>
+</div>
+<div>
+  <h3>Open Sea fishing</h3>
   <img class="image" src="images/fishing.jpg" alt="Candid while holding a fishing rod in Arabian Sea">
-  <ul>A calm moment captured while fishing in the broad seas of the Arabian Sea along the coast of Karachi, focused and ready to reel in.</ul>
-</nav>
+  <p>A calm moment captured while fishing in the broad seas of the Arabian Sea along the coast of Karachi, focused and ready to reel in.</p>
+</div>
 </main>
 
 </body>
